[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/enemies/ufo/UfoHead.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/enemies/ufo/UfoBody.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/enemies/ufo/Ufo.gd" type="Script" id=3]

[sub_resource type="BoxShape" id=1]

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 8.0
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:translation:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, 0, 0, 0, 0, 0.100732, -0.25, -0.01, 0.7, -0.111738, 0.2, -1, 0, 1, 0, 0.0763526, -0.25, -0.01, 0.5, 0.119864, -0.00491135, -0.25, -0.01, 1.1, 0.0873587, -0.2, -1, 0, 1, 0, 0, 0, 0, 0, 0 ),
"times": PoolRealArray( 0, 0.7, 2.1, 3.7, 4.4, 6, 8 )
}

[node name="Ufo" type="Area"]
transform = Transform( 0.75, 0, 0, 0, 0.75, 0, 0, 0, 0.75, 0, -0.25, 0 )
script = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="UfoHead" parent="." instance=ExtResource( 1 )]

[node name="UfoBody" parent="." instance=ExtResource( 2 )]

[node name="TargetPosition" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Idle = SubResource( 2 )

[connection signal="has_recovered" from="UfoHead" to="." method="_on_UfoHead_has_recovered"]
[connection signal="was_defeated" from="UfoHead" to="." method="_on_UfoHead_was_defeated"]
